volexc/tests/ui/parse_service_missing_method_index.out
Error: found ';' expected integer
   ╭─[ parse_service_missing_method_index.vol:6:35 ]
   │
 6 │     fn get(Request) -> Response = ;
   │                                   ┬  
   │                                   ╰── Unexpected ';'
   │ 
   │ Note: Expected one of: integer
───╯