volexc/tests/ui/parse_service_missing_method_index.vol
// Service method missing index - should recover and parse next method
struct Request {}
struct Response {}

service Api {
    fn get(Request) -> Response = ;
    fn list(Request) -> Response = 2;
}
